Bug 100866 - Unhandled exception escaping from connectivity::release
Summary: Unhandled exception escaping from connectivity::release
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Stephan Bergmann
URL: http://crashreport.libreoffice.org/st...
Whiteboard: target:5.3.0 target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-12 13:04 UTC by Stephan Bergmann
Modified: 2016-10-25 18:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["cppu::WeakComponentImplHelperBase::dispose()"]
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Bergmann 2016-07-12 13:04:27 UTC
This bug was filed from the crash reporting server and is br-dfcb0dea-696d-4d40-80eb-115c11631ee0.
=========================================
Comment 1 Commit Notification 2016-07-12 13:10:06 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9624bde1c36a3c1b86d8d88f97bc729ac4d65853

tdf#100866: Don't let exception pass connectivity::release

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2016-07-12 14:05:19 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63628b10bf5402c3006e60db84571d5e6e51931c&h=libreoffice-5-2

tdf#100866: Don't let exception pass connectivity::release

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-07-15 13:19:00 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=18e8af30aa1d2d3e1cc85a0a0454e04ab156cb88&h=libreoffice-5-2-0

tdf#100866: Don't let exception pass connectivity::release

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.