tdf#100866: Don't let exception pass connectivity::release

...which is only ever called from onexcept XInterface::release overrides:
connectivity::release itself appears to be only called from
connectivity::OSubComponent::relase_ChildImpl [sic], which in turn is only
called from various XInterface::release overrides across connectivity.

(cherry picked from commit 9624bde1c36a3c1b86d8d88f97bc729ac4d65853)
Conflicts:
	connectivity/source/commontools/dbtools.cxx

Change-Id: I94b682ec531acecd0ef9f8c100f67a71c361941e
Reviewed-on: https://gerrit.libreoffice.org/27147
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>